# ocaml-spacy

./: .gitignore  Makefile  README.md  dune-project  spacy.opam
example/: dune  main.ml
lib/: base.ml  dune  language.ml  language.mli  spacy.ml  spacy.mli
test/: dune
